--- a/QGCommons/pom.xml
+++ b/QGCommons/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.quirkygaming</groupId>
 	<artifactId>QGCommons</artifactId>
-	<version>1.9.1</version>
+	<version>1.9.2-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot</artifactId>
-			<version>1.12.2-R0.1-SNAPSHOT</version>
+			<version>1.13.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
