QGHeads: 5.1 - Update to 1.13.2

--- a/QGHeads/src/main/resources/plugin.yml
+++ b/QGHeads/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 name: QGHeads
 main: com.quirkygaming.qgheads.QGHeads
-version: 5.0
+version: 5.1
+api-version: 1.13
 depend: [QGCommons, ProtocolLib]
