--- a/QGWebSocket/pom.xml
+++ b/QGWebSocket/pom.xml
@@ -4,18 +4,18 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.quirkygaming</groupId>
 	<artifactId>QGWebSocket</artifactId>
-	<version>0.5</version>
+	<version>0.6</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot</artifactId>
-			<version>1.12.2-R0.1-SNAPSHOT</version>
+			<version>1.13.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.quirkygaming</groupId>
 			<artifactId>QGCommons</artifactId>
-			<version>1.9.1</version>
+			<version>[0,)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
