--- a/QGCustoms/pom.xml
+++ b/QGCustoms/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.quirkygaming</groupId>
 	<artifactId>QGCustoms</artifactId>
-	<version>2.7-SNAPSHOT</version>
+	<version>2.7</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
