--- a/QGCommons/pom.xml
+++ b/QGCommons/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.quirkygaming</groupId>
 	<artifactId>QGCommons</artifactId>
-	<version>1.9.2-SNAPSHOT</version>
+	<version>1.9.2</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
